# landscape-scanner

./: .gitignore  LICENSE  README.md  pyproject.toml
deploy/: landscape-scanner.service  scanner-api.service  setup-nuc.sh
docs/: how-it-works.md
src/scanner/: __init__.py  budget.py  cli.py  keys.py  models.py  pipeline.py  prompts.py  report_html.py  scrape.py  state.py  verify.py
src/scanner/app/: __init__.py  api.py  pages.py  runner.py  server.py
src/scanner/llm/: __init__.py  anthropic_client.py  base.py  openrouter.py  router.py
src/scanner/search/: __init__.py  base.py  brave.py  serper.py
tests/: test_api.py  test_app.py  test_budget.py  test_keys.py  test_models.py  test_pipeline.py  test_report_html.py  test_router.py  test_scrape.py  test_search.py  test_verify.py
